--- a/index.html
+++ b/index.html
@@ -153,16 +153,18 @@
     </div>
 
     <section id="2">
-        <div class="container-fluid  mt-5 px-3">
+        <div class="container  mt-5 px-3">
             <div class="d-flex justify-content-center">
                 <div data-aos="fade-up">
                     <h1 class="display-3">What is a Nutribar?</h1> <br>
-                    <p> Nutri-bar is a cereal bar that has a unique combination of whole-wheat and oats topped up with
+                    <p> Nutri-bar is a cereal bar that has a unique combination of Oats and seeds topped up with
                         dry fruits and nuts.</p>
-                    <p>The Horlicks nutri -bar comes in three flavors - namely Choco Crispy , Cereal n Milk and Nuts n
-                        Raisins . </p>
+                    <p> Nutri bar is a ready to eat multi nutrient bar.  It provides good amounts of calories, protein, dietary fibre
+                         and other nutrients and has a good satiety value. The product is targeted for all age groups. Grab and 
+                         gobble nutrition bars.It is a functional food product as walnuts, oats, almonds, dark 
+                         chocolate and seeds are considerd as healthy. </p>
                     <p>According to the label it provides 114 calories and 1.4 protein There are various other nutri
-                        bars,</p>
+                        bars.</p>
                     <p> protein bars and bars containing nuts that provide different amounts of calories fat, proteins
                         and other essential nutrients .</p>
                     <!-- <div class="col">
